#cargo-features = ["per-package-target"]

#
#[package.metadata.bootloader]
#target = "x86_64-unknown-none"


[package]
name = "iron"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"


[dependencies]
bootloader = {version="0.9.29"}
ufmt = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dev-dependencies]

